# cli

./: .claudeignore  .gitignore  .ignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  UNRELEASED.md  hatch_build.py  pyproject.toml
.ails/: backbone.yml  config.yml
.claude/: mcp.json.example  settings.json
.claude/rules/: backbone.md  checks-readonly.md  documentation.md  instruction-file-style.md  rule-files.md  specs.md  writing-rules.md
.claude/skills/add-changelog-entry/: SKILL.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  post-publish-smoke.yml  release.yml  test-action.yml
.reporails/: backbone.yml  config.yml
.shared/knowledge/: changelog.md
action/: action.yml  parse_result.py  summary.py
checks/content/: C1-core-sections.yml  C10-has-never-statements.yml  C11-links-are-valid.yml  C12-has-version-date.yml  C2-explicit-over-implicit.yml  C3-context-specific-content.yml  C4-anti-pattern-documentation.yml  C5-must-must-not-with-context.yml  C6-single-source-of-truth.yml  C7-emphasis-discipline.yml  C8-instructions-over-philosophy.yml  C9-has-project-description.yml
checks/efficiency/: E1-deterministic-tools-for-style.yml  E2-session-start-ritual.yml  E3-purpose-based-file-reading.yml  E4-memory-reference.yml  E5-grep-efficiency.yml  E6-code-block-line-limit.yml  E7-import-count.yml  E8-context-window-awareness.yml
checks/governance/: G1-organization-level-policies.yml  G2-team-governance-structure.yml  G3-security-rules-ownership.yml  G4-ownership-assignment.yml  G5-contract-registry.yml  G6-component-contract-binding.yml  G7-architecture-tests.yml  G8-metrics-and-cicd-checks.yml
checks/maintenance/: M1-version-control.yml  M2-review-process.yml  M3-change-management.yml  M4-no-conflicting-rules.yml  M5-auto-generated-content-review.yml  M6-map-staleness-prevention.yml  M7-rule-snippet-length-enforcement.yml
checks/structure/: S1-size-limits.yml  S2-progressive-disclosure.yml  S3-no-embedded-code-snippets.yml  S4-hierarchical-memory.yml  S5-path-scoped-rules.yml  S6-yaml-backbone.yml  S7-clear-markdown-structure.yml
docs/: agent-support.md  capability-levels.md  configuration.md  faq.md  features.md  getting-started.md  index.md  rules-cli.md  score-guide.md  tiers.md
docs/specs/: arch.md  caching.md  models.md  modules.md  principles.md  scoring.md  testing.md
framework/: capabilities_matrix.yml  sources.yml
framework/registry/: levels.yml
framework/rules/antigravity/: config.yml
framework/rules/claude/: config.yml
framework/rules/codex/: config.yml
framework/rules/copilot/: config.yml
framework/rules/core/: config.yml
framework/rules/cursor/: config.yml
framework/rules/gemini/: config.yml
framework/schemas/: agent.schema.yml  capability.schema.yml  levels.schema.yml  package.schema.yml  project.schema.yml  rule.schema.yml  sources.schema.yml  user.schema.yml
scripts/: check-config-sync.sh  check_spec_drift.py  check_test_markers.py  fetch_bundled_model.py  link-rules.sh  pre-release-check.sh  specs_check.py  tag_tests.py  validate_registry.py
src/: __init__.py
src/reporails_cli/: .env.example  __init__.py
src/reporails_cli/bundled/: .semgrepignore  __init__.py  capability-patterns.yml  detection.yml  levels.yml  project-types.yml
src/reporails_cli/core/: __init__.py  _torch_blocker.py  agent_discovery.py  agents.py  analytics.py  api_client.py  applicability.py  bootstrap.py  bundled.py  cache.py  capability.py  check_cache.py  classification.py  client_checks.py  config.py  content_checker.py  content_queries.py  discover.py  discover_classify.py  discover_commands.py  download.py  engine.py  engine_helpers.py  fixers.py  funnel.py  harness.py  init.py  levels.py  mcp_install.py  mechanical_fixers.py  memory_checks.py  merger.py  models.py  opengrep.py  payload.py  pipeline.py  pipeline_exec.py  registry.py  results.py  rule_builder.py  (+11 more)
src/reporails_cli/formatters/: __init__.py  github.py  json.py  mcp.py  text.py
src/reporails_cli/interfaces/: __init__.py
src/reporails_cli/semantic/: __init__.py  definitions.py
src/reporails_cli/templates/: __init__.py  cli_box.txt  cli_cta.txt  cli_delta.txt  cli_file_header.txt  cli_legend.txt  cli_pending.txt  cli_violation.txt  cli_working.txt
tests/: CLAUDE.md  __init__.py  conftest.py  test_capability_detection.py  test_delta.py  test_exit_codes.py  test_rule_validation.py  test_scoring.py  test_template_resolution.py  test_templates.py
tests/fixtures/generic-classification/: CLAUDE.md
tests/integration/: __init__.py  test_auth_live.py  test_behavioral.py  test_capability_detection.py  test_charge_classification.py  test_check_single_file.py  test_checks_command.py  test_classify_link_attribution.py  test_cli.py  test_cli_e2e.py  test_engine.py  test_exit_codes.py  test_golden_snapshot.py  test_mcp.py  test_mcp_e2e.py  test_metadata_propagation.py  test_pipeline_smoke.py  test_rule_validation.py  test_scoring.py  test_self_update.py  test_symlink_validation.py  test_template_resolution.py
tests/skills/: CLAUDE.md
tests/skills/ails/: test-procedure.md
tests/smoke/: conftest.py  test_smoke.py
tests/unit/: __init__.py  conftest.py  test_agent_config.py  test_agents_dedupe.py  test_api_client.py  test_applicability.py  test_auth_edge_challenge.py  test_auth_error_messaging.py  test_backbone_gate.py  test_byte_preflight.py  test_cache.py  test_cache_structural.py  test_capability_paths.py  test_check_cache.py  test_classification.py  test_client_checks.py  test_cluster_topics.py  test_completeness.py  test_config_command.py  test_config_resolution.py  test_delta.py  test_discover.py  test_display_filter.py  test_download_rules_staging.py  test_embedded_marker_refs.py  test_engine.py  test_engine_helpers.py  test_exit_codes.py  test_fixers.py  test_focus_expansion.py  test_formatters.py  test_funnel.py  test_gates.py  test_github_formatter.py  test_harness.py  test_heal.py  test_heal_scope_safety.py  test_json_canonical_rule_ids.py  test_json_formatter.py  test_leverage.py  (+43 more)
(+565 files in other folders)
