[project]
name = "reporails-cli"
version = "0.5.11"
description = "AI instruction diagnostics for coding agents"
readme = "README.md"
license = "BUSL-1.1"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Reporails Team" }]
keywords = ["ai-instructions", "claude", "codex", "copilot", "cursor", "gemini", "diagnostics", "validation", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "packaging>=23.0",
    "markdown-it-py>=3.0.0",
    # Cross-platform regex timeout (built into the matcher; works on Windows
    # where SIGALRM is unavailable). Drop-in replacement for stdlib `re`.
    "regex>=2024.11.6",
    # Embedding stack — ONNX Runtime + HF tokenizers on bundled MiniLM-L6-v2.
    # No torch, no sentence-transformers. See core/_torch_blocker.py and
    # core/mapper/onnx_embedder.py for the reason and the wiring.
    "onnxruntime>=1.18,<2",
    "tokenizers>=0.19,<1",
    "numpy>=1.26,<3",
    # spaCy provides the dependency-parser branch of the classifier. With
    # the torch blocker active, spaCy loads in ~1s. The en_core_web_sm
    # pipeline files ship inside the wheel under bundled/spacy/ rather
    # than as a separate runtime dep — spaCy does not publish its language
    # models on PyPI, so a direct-URL pin would block PyPI publication.
    "spacy>=3.8.11,<4",
    # sklearn for topic clustering in mapper
    "scikit-learn>=1.4.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "ruff>=0.3.0",
    "pylint>=3.0.0",
    "poethepoet>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "ruff>=0.3.0",
    "pylint>=3.0.0",
    "poethepoet>=0.25.0",
    # huggingface_hub: only needed by scripts/fetch_bundled_model.py on
    # dev machines and in CI. Not a runtime dep — end users get the
    # pre-bundled wheel with the ONNX model already inside.
    "huggingface_hub>=0.23",
    # Research / test extras (not on the CLI critical path)
    "scipy>=1.17.1",
    "networkx>=3.6.1",
    "matplotlib>=3.10.8",
    "sympy>=1.14.0",
    "scikit-learn>=1.8.0",
    "anthropic>=0.40.0",
]

[project.scripts]
ails = "reporails_cli.interfaces.cli.main:app"
reporails-cli = "reporails_cli.interfaces.cli.main:app"
reporails-mcp = "reporails_cli.interfaces.mcp.server:main"

[project.urls]
Homepage = "https://reporails.com"
Documentation = "https://github.com/reporails/cli#readme"
Repository = "https://github.com/reporails/cli"
Issues = "https://github.com/reporails/cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reporails_cli"]
artifacts = [
    "src/reporails_cli/bundled/*.yml",
]

[tool.hatch.build.targets.wheel.hooks.custom]

[tool.poe.tasks]
fmt = "ruff format src/ tests/"
lint_fix = "ruff check --fix src/ tests/"
lint = "ruff check src/ tests/"
pylint_struct = "pylint src/reporails_cli/ --disable=all --enable=R0902,R0904,R0911,R0912,R0913,R0914,R0915,R0916,C0301,C0302 --exit-zero --fail-under=9.99"
type = "mypy src/"
test_unit = "pytest tests/unit/ -v"
test_integration = "pytest tests/integration/ -v"
test_smoke = "pytest tests/smoke/ -v -m e2e"
test_live = "pytest -v -m requires_network"
test_lint = "ails test --lint --rules-root framework/rules"
qa_fast = ["fmt", "lint_fix", "lint", "pylint_struct", "type", "test_markers", "test_lint", "test_unit"]
qa = ["fmt", "lint_fix", "lint", "pylint_struct", "type", "test_lint", "test_unit", "test_integration", "test_smoke"]
mcp_dev = "python -m reporails_cli.interfaces.mcp.server"
fetch_bundled_model = "python scripts/fetch_bundled_model.py"
test_markers = "python scripts/check_test_markers.py"
test_fast = "pytest -m 'unit and not slow and not requires_model'"
test_arch = "pytest -m architecture"
test_contracts = "pytest -m contract"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "C90", "SIM", "ARG", "PERF", "RUF"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
mypy_path = "src"
packages = ["reporails_cli"]
explicit_package_bases = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "reporails_cli._archived.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pylint.main]
max-module-lines = 600
max-args = 8

[tool.pylint.design]
max-attributes = 12
max-branches = 12
max-statements = 50
max-returns = 6
max-locals = 15

[tool.pylint.format]
max-line-length = 120
max-module-lines = 600

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    # Lane — mutually exclusive within a test
    "unit: Fast, isolated, no I/O outside repo, no ML models",
    "integration: Cross-component, may load ML models",
    "e2e: End-to-end CLI on fixture project",
    "smoke: Alias for e2e (preferred for new tests)",
    "architecture: AST/structural assertions across the codebase",
    "contract: Pure validator function in isolation",
    # Cost — orthogonal, additive
    "slow: Takes more than 1 second",
    "requires_model: Needs the bundled ML runtime",
    "requires_network: Hits real external service",
    "real_deps: Needs API key or live backend",
    # Subsystem tags — one or more per test
    "subsys_caching",
    "subsys_map",
    "subsys_classify",
    "subsys_runtime",
    "subsys_heal",
    "subsys_funnel",
    "subsys_lint",
    "subsys_diagnostic",
    "subsys_server",
    "subsys_api",
    "subsys_gates",
    "subsys_cli_ux",
]
